Changed filenames to follow c# conventions

--- a/BackupManager.Console/BackupManager.Console.csproj
+++ b/BackupManager.Console/BackupManager.Console.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FindDates\FindDates.csproj" />
+    <ProjectReference Include="..\BackupManager.FindDates\BackupManager.FindDates.csproj" />
   </ItemGroup>
 
 </Project>
