movefolders.distrubute works
it looks so shitty tho

--- a/BackupManager.Console/BackupManager.Console.csproj
+++ b/BackupManager.Console/BackupManager.Console.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BackupManager.FindDates\BackupManager.FindDates.csproj" />
+    <ProjectReference Include="..\BackupManager.FolderBreadkdown\BackupManager.FolderBreadkdown.csproj" />
   </ItemGroup>
 
 </Project>
